renamed backto persistence.xml as application is currently deployed on cloudfoundry,also organized profiles -- test,local,cloud,openshift. Changed the way LocalEntityManagerFactoryBean is getting created, and other small changes